--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
 
   <div class="search-section">
-    <input type="text" id="blank" placeholder="Movie Title">
+    <input type="text" id="blank" placeholder="food">
     <button id="search">Search</button>
   
   
