working on dropdown menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     <h1>Needing a quick Dinner idea?</h1>
   </header>
 
+  <div> class="dropdown">
+    <button></button> onclick="showMeals()" class="dropBtn">Dropdown<button>
+      <div id="myDropdown" class="dropdown-content">
+        <a href=#>BeefLink</a>
+        <a href=#>ChickenLink</a>
+        <a href=#>FishLink</a>
+        <a href=#>eggLink</a>
+      </div>
+
+  </div>
+
   <div class="search-section">
     <input type="text" id="blank" placeholder="food">
     <button id="search">Search</button>
