--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
     <h1>Needing a quick Dinner idea?</h1>
   </header>
 
+  <!-- ================Dropdown Menu ================= -->
   <div> class="dropdown">
     <button></button> onclick="showMeals()" class="dropBtn">Dropdown<button>
       <div id="myDropdown" class="dropdown-content">
         <a href=#>BeefLink</a>
         <a href=#>ChickenLink</a>
         <a href=#>FishLink</a>
-        <a href=#>eggLink</a>
+        <a href=#>EggsLink</a>
       </div>
 
   </div>
