--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>Needing a quick Dinner idea?</h1>
   </header>
 
-  <!-- ================Dropdown Menu ================= -->
+  <!-- ================Dropdown Menu =================
   <div> class="dropdown">
     <button></button> onclick="showMeals()" class="dropBtn">Dropdown<button>
       <div id="myDropdown" class="dropdown-content">
@@ -26,14 +26,19 @@
         <a href=#>ChickenLink</a>
         <a href=#>FishLink</a>
         <a href=#>EggsLink</a>
-      </div>
+      </div> -->
 
   </div>
 
   <div class="search-section">
     <input type="text" id="blank" placeholder="food">
     <button id="search">Search</button>
+  </div>
   
+  <section class="meal-list">
+    <h2>Meal List</h2>
+    <!-- <div> class = mealsDiv </div> -->
+  </section>
   
 </body>
 </html>
