--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <a href=#>EggsLink</a>
       </div> -->
 
-  </div>
+  <h1>Feel Free to search here by an ingredient?</h1>
 
   <div class="search-section">
-    <input type="text" id="blank" placeholder="food">
-    <button id="search">Search</button>
+    <input type="text" id="blank" placeholder="Ingredient name">
+    <button id="searchBtn">Search</button>
   </div>
   
+  <h2>Meal Ideas:</h2>
   <section class="meal-list">
-    <h2>Meal List</h2>
     <!-- <div> class = mealsDiv </div> -->
   </section>
   
