--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1>Dad's Dinner Ideas</h1>
     <picture>
       <source media="(min-width: 650px)" srcset="images/cooking.jpeg">
-      <source media="(min-width: 465px)" srcset="images/cooking.jpeg">
-      <img src="images/cooking.jpeg">
+      <source media="(min-width: 450px)" srcset="images/ipad_photo.jpeg">
+      <img src="images/iphone_photo.jpeg">
     </picture>
     
 
