--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- linking to JS file with a defer to wait for the html/DOM to load -->
   <script defer src="script.js"></script>
 
+  <!-- linking to CSSS file -->
+  <link href="style.css" type="text/css" rel="stylesheet"/>
+
 
   <title>Dad Dinners</title>
 
@@ -32,8 +35,8 @@
       <option value=1063645>Beef</option>
       <option value=715525>Chicken</option>
       <option value=635944>Fish</option>
-      <option value=636458>Eggs</option>
-      <option value=645246>Dessert</option>
+      <option value=646545>Eggs</option>
+      <option value=640002>Dessert</option>
     </select>
     <!-- <input id="submit" type="submit" value="submit" /> -->
   </div>
