--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
   <!-- ================Dropdown Menu ================= -->
   <div class="dropDown">
-    <label for="mainIngredient">Quick Meal Ideas</label>
+    <label for="mainIngredient">Quick Meal Ideas: </label>
     <select id="mainIngredient" name="mainIngredient" onchange="dropResults()">
       <option value="choose">Please choose one</option>
       <option value=1063645>Beef</option>
-      <option value=715525>Chicken</option>
+      <option value=633519>Chicken</option>
       <option value=635944>Fish</option>
       <option value=646545>Eggs</option>
       <option value=640002>Dessert</option>
