--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <!-- linking to CSSS file -->
   <link href="style.css" type="text/css" rel="stylesheet"/>
 
+  <!-- Making sure HTML is set for screen size since mobile phones try to set the screen size on thier own -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Dad Dinners</title>
 
@@ -18,11 +20,12 @@
 <body>
   <header>
     <h1>Dad's Dinner Ideas</h1>
-    <picture>
+    <!-- <picture>
       <source media="(min-width: 650px)" srcset="images/cooking.jpeg">
       <source media="(min-width: 450px)" srcset="images/ipad_photo.jpeg">
       <img src="images/iphone_photo.jpeg">
-    </picture>
+    </picture> -->
+    <img src="images/cooking.jpeg">
     
 
   </header>
