--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <header>
     <h1>Dad's Dinner Ideas</h1>
       <picture>
-      <source media="(min-width: 650px)" srcset="images/cooking.jpeg" class="photo">
-      <source media="(min-width: 450px)" srcset="images/ipad_photo.jpeg" class="photo">
-      <img src="images/iphone_photo.jpeg" class="photo">
+      <source media="(min-width: 650px)" srcset="images/cooking.jpeg" class="photo" alt="Dad cooking with Son">
+      <source media="(min-width: 450px)" srcset="images/ipad_photo.jpeg" class="photo" alt="Dad cooking with Daughter">
+      <img src="images/iphone_photo.jpeg" class="photo" alt="Dad holding Daughter">
     </picture>
 
   </header>
